--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lodash": "^4.17.21",
     "nprogress": "^0.2.0",
     "pinia": "^2.0.34",
+    "v-resize-yc": "^1.0.0",
     "vue": "^3.2.38",
     "vue-router": "^4.1.5",
     "vuex": "^4.1.0"
