--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.0.10",
     "@types/lodash-es": "^4.17.6",
+    "@vueuse/components": "^10.1.2",
     "@vueuse/core": "^9.5.0",
     "axios": "^1.2.0",
     "crypto-js": "3.1.9-1",
@@ -19,9 +20,10 @@
     "element-plus": "^2.2.25",
     "global": "^4.4.0",
     "js-md5": "^0.7.3",
-    "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
     "nprogress": "^0.2.0",
     "pinia": "^2.0.34",
+    "print-js": "1.6.0",
     "vue": "^3.2.38",
     "vue-router": "^4.1.5",
     "vuex": "^4.1.0"
@@ -31,9 +33,10 @@
     "@iconify-json/ep": "^1.1.8",
     "@iconify-json/icon-park": "^1.1.10",
     "@iconify-json/teenyicons": "^1.1.3",
-    "@types/node": "^16.11.56",
-    "@vitejs/plugin-legacy": "^2.3.1",
-    "@vitejs/plugin-vue": "^3.0.3",
+    "@types/node": "^20.11.5",
+    "@vitejs/plugin-legacy": "^5.2.0",
+    "@vitejs/plugin-vue": "^5.0.3",
+    "@vitejs/plugin-vue-jsx": "^3.1.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.19",
     "postcss-load-config": "^4.0.1",
@@ -44,7 +47,7 @@
     "unplugin-auto-import": "^0.11.4",
     "unplugin-icons": "^0.14.13",
     "unplugin-vue-components": "^0.22.9",
-    "vite": "^3.0.9",
+    "vite": "^5.0.12",
     "vite-plugin-cdn-import": "^0.3.5",
     "vite-plugin-compression": "^0.5.1",
     "vue-tsc": "^0.40.7"
